# ZBot

./: .dockerignore  .env.example  .gitignore  111.py  Dockerfile  MCP使用指南.md  README.md  REFCTOR_SUGGESTION.md  ZBot_项目审查.md  ZBot异步机制详解.md  ZBot面试背诵手册.md  docker-compose.yml  pyproject.toml  requirements.txt  start.py  test-skill.skill  test.py
.claude/: settings.local.json
.github/workflows/: ci.yml
ZBot/: __init__.py  __main__.py
ZBot/agent/: __init__.py  base_agent.py  context.py  core_agent.py  loop.py  memory.py  skills.py  skills_load.py
ZBot/backend/: __init__.py  agent_service_pool.py  app.py  dependencies.py  parse.py
ZBot/cli/: __init__.py  commands.py
ZBot/config/: __init__.py  agent_runtime.py  loader.py  paths.py  schema.py
ZBot/cron/: __init__.py  service.py  types.py
ZBot/frontend/: FRONTEND_GUIDE.md  SESSION_LIST_TUTORIAL.md  ZBOT_FRONTEND_NEXT_STEP_GUIDE.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
ZBot/memory/: daily_memory.py  long_term_memory.py  session_memory.py
ZBot/prompts/: agent.py  memory_prompts.py  validation.py
ZBot/providers/: __init__.py  base.py  litellm_provider.py  registry.py
ZBot/service/: __init__.py  config_service.py
ZBot/services/: config.py  task_validation.py
ZBot/session/: __init__.py  manager.py
ZBot/skills/: README.md
ZBot/tasks/: celery_app.py  task.py  windows_service.py
ZBot/templates/: AGENTS.md  MEMORY.md  SOUL.md  SUBAGENT.md  TOOLS.md  USER.md  __init__.py
ZBot/test/: agent_loop_test.py  conftest.py  test_agent.py  test_agent_routes.py  test_agent_runs_api.py  test_config_api.py  test_config_routes.py  test_config_schema.py  test_config_service.py  test_follow_ups_api.py  test_mcp_config.py  test_provider_metadata.py  test_session_manager.py  tool_test.py  (+1 more)
docs/: 01_项目架构.md  02_运行流程.md  03_核心源码解析.md  04_面试讲解稿.md  05_项目难点与优化.md  06_类与方法全解析.md  消息格式完全指南.md
memory/: SKILL_USAGE.db
nanobot/: __init__.py  __main__.py
(+248 files in other folders)
