[project]
name = "zbot"
version = "0.1.0"
description = "ZBot 个人 AI 命令行助手"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "typer>=0.9.0",
    "prompt_toolkit>=3.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "litellm>=1.0.0",
    "loguru>=0.7.0",
    "httpx>=0.25.0",
    "json_repair>=0.7.0",
    "mcp>=1.0.0",
    "readability-lxml>=0.8.0",
    "PyYAML>=6.0",
    "croniter>=6.2.2",
    "sqlite-vec>=0.1.9",
    "langchain>=1.2.17",
    "langchain-community>=0.4.1",
    "aiosqlite>=0.22.1",
    "celery>=5.6.3",
    "pywin32>=311 ; sys_platform == 'win32'",
    "aiofiles>=25.1.0",
    "fastapi>=0.136.3",
    "uvicorn>=0.45.0",
    "websockets>=16.0",
    "sentence-transformers>=5.5.1",
    "ruff>=0.15.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0.0",
    "pip-audit>=2.7.0",
]

[project.scripts]
zbot = "ZBot.__main__:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["ZBot/test"]
python_files = ["*_test.py", "test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
